Revert "Merge branch 'ppfe_gl8-adapt-xua-profile' into 'master'"
This reverts merge request !8